# wsl-pathlib

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_new.md  environment.yml  pyproject.toml  pytest.min.ini  setup.cfg
.cursor/rules/: pytest-syntax.md
.github/workflows/: misspell.yml  test.yml
docs/: conf.py  requirements.txt
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_example/: test_some_function.py
tests/tests_wsl/: test_wsl_path.py
wsl_pathlib/: __init__.py  path.py
