[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "wsl-pathlib"
description = "Add wsl_path and win_path Properties to pathlib.Path Class."
version = "0.1.4"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/psychonaute/wsl-pathlib"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
nitpick = "^0.29"
safety = "^1.10"
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-randomly = "^3.10.3"
sphinx = "^4.3.1"
sphinx-autodoc-typehints = "^1.12"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.7"
